force-app/main/default/objects/Business_Management__c/Business_Management__c.object-meta.xml
<CustomObject>
    <label>Business Management</label>
    <nameField>
        <displayFormat>BM-{0000}</displayFormat>
        <label>BM #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>