force-app/main/default/objects/Business_Management__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter Wild Desert so that the record is linked to Wild Desert page in Accounts</inlineHelpText>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Management</relationshipLabel>
    <relationshipName>Business_Management</relationshipName>
    <type>Lookup</type>
</CustomField>