force-app/main/default/objects/Business_Management__c/fields/Inspection_Interval__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Interval__c</fullName>
    <label>Inspection Interval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>6 Monthly</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Year</fullName>
            </value>
            <value>
                <fullName>3 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>