force-app/main/default/objects/Business_Management__c/fields/Review_Name__c.field-meta.xml
<CustomField>
    <fullName>Review_Name__c</fullName>
    <label>Review Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>