force-app/main/default/objects/Business_Management__c/fields/Review_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Review_Procedure__c</fullName>
    <label>Review Procedure</label>
    <type>TextArea</type>
</CustomField>