force-app/main/default/objects/Business_Management__c/fields/Role_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Role_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role Responsible</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Business Management</relationshipLabel>
    <relationshipName>Business_Management</relationshipName>
    <type>Lookup</type>
</CustomField>