force-app/main/default/objects/Business_Management__c/fields/Roles_Involved__c.field-meta.xml
<CustomField>
    <fullName>Roles_Involved__c</fullName>
    <label>Roles Involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>Business Manager</fullName>
            </value>
            <value>
                <fullName>HSE Manager</fullName>
            </value>
            <value>
                <fullName>Operations Manager</fullName>
            </value>
            <value>
                <fullName>Transport Manager</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
            <value>
                <fullName>Finance Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>